--- a/trunk/Rimy3D/source/mainwindow.ui
+++ b/trunk/Rimy3D/source/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>524</width>
-    <height>372</height>
+    <width>789</width>
+    <height>634</height>
    </rect>
   </property>
   <widget class="QWidget" name="centralWidget">
@@ -26,7 +26,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>524</width>
+     <width>789</width>
      <height>22</height>
     </rect>
    </property>
@@ -38,6 +38,7 @@
      <bool>true</bool>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="actionMerge"/>
     <addaction name="actionClose"/>
     <addaction name="separator"/>
     <addaction name="actionSave_As"/>
@@ -185,6 +186,14 @@
   <action name="actionGenome_Material_Editor">
    <property name="text">
     <string>Genome Material Editor...</string>
+   </property>
+  </action>
+  <action name="actionMerge">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Merge...</string>
    </property>
   </action>
  </widget>
